Creates sample .env-sample file to show environment variables

--- a/azure_ai_search_testing.ipynb
+++ b/azure_ai_search_testing.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Installing Vanna as a locally editable pip package\n",
+    "To install vanna as a locally editable pip package, navigate to the root of the repositor and run this command: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -e ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Vanna - Teesting AzureAISearch as a vector store"
    ]
   },
