Adds app.py to run as a flask app

--- a/azure_ai_search_testing.ipynb
+++ b/azure_ai_search_testing.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install azure-core azure-search-documents openai"
+    "%pip install azure-core azure-search-documents openai python-dotenv"
    ]
   },
   {
