Added docker and included sql odbc dependency

--- a/azure_ai_search_testing.ipynb
+++ b/azure_ai_search_testing.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Deploying Azure Resources\n",
+    "You can bring your own data source, but if you want to just test the end-to-end experience you should\n",
+    "1. Deploy an Azure AI Search instance: https://learn.microsoft.com/en-us/azure/search/search-create-service-portal\n",
+    "1. Deploy an Azure SQL Database with the default AdventureWorksLT database: https://learn.microsoft.com/en-us/azure/azure-sql/database/single-database-create-quickstart?view=azuresql&tabs=azure-portal#create-a-single-database\n",
+    "1. Update Azure SQL Database network to allow access to your local IP address: https://learn.microsoft.com/en-us/azure/azure-sql/database/firewall-create-server-level-portal-quickstart?view=azuresql#create-a-server-level-ip-based-firewall-rule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Installing Vanna as a locally editable pip package\n",
     "To install vanna as a locally editable pip package, navigate to the root of the repositor and run this command: "
    ]
@@ -54,13 +65,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vanna - Testing AzureAISearch as a vector store\n",
+    "# Vanna - AzureAISearch as a vector store\n",
     "After you have completed the setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,17 +87,286 @@
     }
    ],
    "source": [
+    "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "from vanna.openai import OpenAI_Chat\n",
     "from vanna.azureaisearch import AzureAISearch_VectorStore\n",
     "\n",
-    "class MyVanna(AzureAISearch_VectorStore, OpenAI_Chat):\n",
+    "class AzureVanna(AzureAISearch_VectorStore, OpenAI_Chat):\n",
     "    def __init__(self, config=None):\n",
     "        AzureAISearch_VectorStore.__init__(self, config=config)\n",
     "        OpenAI_Chat.__init__(self, client=self.aoai_client, config=config) # Make sure to put your AzureOpenAI client here\n",
     "\n",
-    "vn = MyVanna(config={\"temperature\": 0.7})"
+    "vn = AzureVanna(config={\"model\": os.getenv(\"AZURE_OPENAI_CHAT_DEPLOYMENT\")})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting up Azure SQL Database as SQL source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Database connection details \n",
+    "server = os.getenv('AZURE_SQL_DB_SERVER')\n",
+    "database = os.getenv('AZURE_SQL_DB_NAME')\n",
+    "username = os.getenv('AZURE_SQL_DB_USER')\n",
+    "password = os.getenv('AZURE_SQL_DB_PASSWORD')\n",
+    "\n",
+    "conn_string = f'DRIVER={{ODBC Driver 17 for SQL Server}};SERVER={server};DATABASE={database};UID={username};PWD={password}'\n",
+    "\n",
+    "vn.connect_to_mssql(odbc_conn_str=conn_string) # You can use the ODBC connection string here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Train on Information Schema: AdventureWorksLT.SalesLT Customer',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT ProductModel',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT vProductModelCatalogDescription',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT ProductDescription',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT Product',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT ProductModelProductDescription',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT vProductAndDescription',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT ProductCategory',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT vGetAllCategories',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT Address',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT CustomerAddress',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT SalesOrderDetail',\n",
+       " 'Train on Information Schema: AdventureWorksLT.SalesLT SalesOrderHeader']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## training\n",
+    "# The information schema query may need some tweaking depending on your database. This is a good starting point.\n",
+    "df_information_schema = vn.run_sql(\"SELECT * FROM INFORMATION_SCHEMA.COLUMNS WHERE TABLE_SCHEMA IN ('SalesLT')\")\n",
+    "\n",
+    "# This will break up the information schema into bite-sized chunks that can be referenced by the LLM\n",
+    "plan = vn.get_training_plan_generic(df_information_schema)\n",
+    "plan.get_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you like the plan, then uncomment this and run it to train\n",
+    "vn.train(plan=plan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>question</th>\n",
+       "      <th>content</th>\n",
+       "      <th>training_data_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>84e63602-e3ea-5a0d-9073-9068f3e8dcaa-ddl</td>\n",
+       "      <td>None</td>\n",
+       "      <td>CREATE TABLE albums (id INT, name VARCHAR(255)...</td>\n",
+       "      <td>ddl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>05832e79-cf3f-57af-8cc9-56df5e0ca503-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The sales in the album table are in quantity o...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ae259e99-69d0-5f36-aa4e-7dd6975afabf-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the Customer tabl...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bbffef92-85c2-5e95-85a1-616e3d134074-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the ProductModel ...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>f357ceb2-c709-5eee-8a25-6435de554716-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the vProductModel...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>658d4cb3-be3c-5abb-aa86-b14d4b15d229-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the ProductDescri...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>60649072-f371-5319-8847-652950d45e59-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the Product table...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>66b73c2a-625b-5e72-83e9-14eee8cbe4a6-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the ProductModelP...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0d9e064b-1597-5996-8bfc-4919c776b803-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the vProductAndDe...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>fabfa083-9d96-59ee-b82f-37aab3c9f10d-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the ProductCatego...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>b5b0e0f3-da7c-5027-8f87-ce597e7263c2-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the vGetAllCatego...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>c2c912d4-fcad-5178-b7f4-96fcb3b0cd0b-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the Address table...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>9e5c001e-80ac-564d-9cc4-af123c48a461-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the CustomerAddre...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>c8403f79-c68e-573b-a300-cc78e365e3f7-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the SalesOrderDet...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>35c886d9-b0ae-51fa-9898-9a31434679e6-doc</td>\n",
+       "      <td>None</td>\n",
+       "      <td>The following columns are in the SalesOrderHea...</td>\n",
+       "      <td>documentation</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          id question  \\\n",
+       "0   84e63602-e3ea-5a0d-9073-9068f3e8dcaa-ddl     None   \n",
+       "0   05832e79-cf3f-57af-8cc9-56df5e0ca503-doc     None   \n",
+       "1   ae259e99-69d0-5f36-aa4e-7dd6975afabf-doc     None   \n",
+       "2   bbffef92-85c2-5e95-85a1-616e3d134074-doc     None   \n",
+       "3   f357ceb2-c709-5eee-8a25-6435de554716-doc     None   \n",
+       "4   658d4cb3-be3c-5abb-aa86-b14d4b15d229-doc     None   \n",
+       "5   60649072-f371-5319-8847-652950d45e59-doc     None   \n",
+       "6   66b73c2a-625b-5e72-83e9-14eee8cbe4a6-doc     None   \n",
+       "7   0d9e064b-1597-5996-8bfc-4919c776b803-doc     None   \n",
+       "8   fabfa083-9d96-59ee-b82f-37aab3c9f10d-doc     None   \n",
+       "9   b5b0e0f3-da7c-5027-8f87-ce597e7263c2-doc     None   \n",
+       "10  c2c912d4-fcad-5178-b7f4-96fcb3b0cd0b-doc     None   \n",
+       "11  9e5c001e-80ac-564d-9cc4-af123c48a461-doc     None   \n",
+       "12  c8403f79-c68e-573b-a300-cc78e365e3f7-doc     None   \n",
+       "13  35c886d9-b0ae-51fa-9898-9a31434679e6-doc     None   \n",
+       "\n",
+       "                                              content training_data_type  \n",
+       "0   CREATE TABLE albums (id INT, name VARCHAR(255)...                ddl  \n",
+       "0   The sales in the album table are in quantity o...      documentation  \n",
+       "1   The following columns are in the Customer tabl...      documentation  \n",
+       "2   The following columns are in the ProductModel ...      documentation  \n",
+       "3   The following columns are in the vProductModel...      documentation  \n",
+       "4   The following columns are in the ProductDescri...      documentation  \n",
+       "5   The following columns are in the Product table...      documentation  \n",
+       "6   The following columns are in the ProductModelP...      documentation  \n",
+       "7   The following columns are in the vProductAndDe...      documentation  \n",
+       "8   The following columns are in the ProductCatego...      documentation  \n",
+       "9   The following columns are in the vGetAllCatego...      documentation  \n",
+       "10  The following columns are in the Address table...      documentation  \n",
+       "11  The following columns are in the CustomerAddre...      documentation  \n",
+       "12  The following columns are in the SalesOrderDet...      documentation  \n",
+       "13  The following columns are in the SalesOrderHea...      documentation  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# At any time you can inspect what training data the package is able to reference\n",
+    "training_data = vn.get_training_data()\n",
+    "training_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing Individual Methods of the AzureAISearch_VectorStore"
    ]
   },
   {
